tests/mm0_mmu/fail/bad-sort143.mm0
-- bad modifier order
pure free provable sort s143;